mcq story alignment fix

--- a/src/pages/Frames/Story/Mcq/mcq.module.css
+++ b/src/pages/Frames/Story/Mcq/mcq.module.css
@@ -93,10 +93,10 @@
    .storyMcq {
       max-width: 460px;
       padding: 1rem;
-      display: grid;
+      display: flex;
       align-items: center;
-      min-height: 720px;
-      height: calc(100vh - 120px);
+      /* min-height: 720px;
+      height: calc(100vh - 120px); */
       overflow: visible;
    }
 
@@ -142,5 +142,9 @@
 
    .mcqResponseInCorrect img .mcqResponseCorrect img {
       width: 50%;
+   }
+
+   .mcqOptions {
+      max-width: max-content;
    }
 }
